<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Diablo III Browser</string>
    <string name="info"><![CDATA[Dear user.<br>This application is free and Open Source.<br><br>Everybody could help making this app better.<br>For more info visit <a href=\'https://github.com/EmilYo/diabloheroesbrowser/wiki\'>official site</a>.]]></string>
    <string name="battletag_textview_text">enter a BattleTag (tag#0000)</string>
    <string name="battletag_find_button_text">SHOW PLAYER</string>
    <string name="battletag_wrong">BattleTag is wrong</string>
    <string name="internt_connection_error">Internet connection is needed for showing profile</string>
    <string name="wrong_url">Something wrong with url you try to download</string>
    <string name="no_career_profile">Carerr profile dosn\'t exist. Check entered BattleTag and server twice.</string>
    <string name="no_hero">There\'s an error while download hero data. Try again later.</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="career_tab">Career</string>
    <string name="artisans_tab">Artisans</string>
    <string name="heroes_tab">Heroes</string>
    <string name="fallen_heroes_tab">Fallen heroes</string>
    <string name="equipment_tab">Equipment</string>
    <string name="followers_tab">Followers</string>
    <string name="hero_general_tab">Details</string>
    <string name="hero_progression_tab">Progress</string>
    <string name="skills_tab">Skills</string>
    <string name="blacksmith">Blacksmith</string>
    <string name="jeweler">Jeweler</string>
    <string name="artisan_level">Level %d (Normal)</string>
    <string name="artisan_level_hardcore">Level %d (Hardcore)</string>
    <string name="progression_level_normal">Normal</string>
    <string name="progression_level_nightmare">Nightmare</string>
    <string name="progression_level_hell">Hell</string>
    <string name="progression_level_inferno">Inferno</string>
    <string name="kills"><![CDATA[<b>%d</b><br>Monsters kills]]></string>
    <string name="elite_kills"><![CDATA[<b>%d</b><br>Elite kills]]></string>
    <string name="hardcore_kills"><![CDATA[<b>%d</b><br>Hardcore<br>monsters kills]]></string>
    <string name="attributes">Attributes</string>
    <string name="attributes_description"><![CDATA[Strength<br>Dexterity<br>Intelligence<br>Vitality<br>Armor<br>Damage]]></string>
    <string name="offense">Offense</string>
    <string name="offense_description"><![CDATA[Damage Increased<br>Attacks per Second<br>Critical Hit Chance<br>Critical Hit Damage]]></string>
    <string name="defense">Defense</string>
    <string name="defense_description"><![CDATA[Block Amount Min<br>Block Amount Max<br>Block Chance<br>Damage Reduction<br>Physical Resistance<br>Cold Resistance<br>Fire Resistance<br>Lightning Resistance<br>Poison Resistance<br>Arcane Resistance<br>Thorns]]></string>
    <string name="life">Life</string>
    <string name="life_description"><![CDATA[Maximum Life<br>Life Steal<br>Life per Kill<br>Life per Hit]]></string>
    <string name="resource">Resource</string>
    <string name="resource_description"><![CDATA[Primary Resource<br>Secondary Resource]]></string>
    <string name="adventure">Adventure</string>
    <string name="adventure_description"><![CDATA[Gold Find<br>Magic Find]]></string>
    <string name="last_finished_quest">Last finished quest</string>
    <string name="fallen_info">Killed by %1$s\nin %2$s</string>
    <string name="tooltip_download_error">Couldn\'t download info.</string>
    <string name="downloading_data">Downloading data&#8230;</string>
    <string name="hardcore_progress">Hardcore progress</string>

    <string-array name="servers_name">
        <item>Americas</item>
        <item>Europe</item>
        <item>Korea</item>
        <item>Asia</item>
    </string-array>
    
        <string-array name="servers_code">
        <item>us</item>
        <item>eu</item>
        <item>kr</item>
        <item>tw</item>
    </string-array>

</resources>