<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="35dp"
    android:paddingTop="35dp" >

    <SeekBar
        android:id="@+id/progression_seek_normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="16"
        android:maxHeight="40dp"
        android:progress="0"
        android:progressDrawable="@drawable/seekbar"
        android:thumb="@drawable/seek_thumb"
        android:thumbOffset="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="20dp" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:text="@string/progression_level_normal"
            android:textAllCaps="true"
            android:textColor="#77705d"
            android:textSize="12dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/progression_level_nightmare"
            android:textAllCaps="true"
            android:textColor="#77705d"
            android:textSize="12dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/progression_level_hell"
            android:textAllCaps="true"
            android:textColor="#77705d"
            android:textSize="12dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/progression_level_inferno"
            android:textAllCaps="true"
            android:textColor="#77705d"
            android:textSize="12dp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingLeft="10dp"
        android:text="@string/hardcore_progress"
        android:textColor="#a30400" />

    <SeekBar
        android:id="@+id/progression_seek_hardcore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="16"
        android:maxHeight="40dp"
        android:progress="0"
        android:progressDrawable="@drawable/seekbar"
        android:thumb="@drawable/seek_thumb"
        android:thumbOffset="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="20dp" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:text="@string/progression_level_normal"
            android:textAllCaps="true"
            android:textColor="#77705d"
            android:textSize="12dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/progression_level_nightmare"
            android:textAllCaps="true"
            android:textColor="#77705d"
            android:textSize="12dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/progression_level_hell"
            android:textAllCaps="true"
            android:textColor="#77705d"
            android:textSize="12dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/progression_level_inferno"
            android:textAllCaps="true"
            android:textColor="#77705d"
            android:textSize="12dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp" >

        <TextView
            android:id="@+id/kills"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/swords"
            android:gravity="center_vertical"
            android:textColor="@color/standard_text" />

        <TextView
            android:id="@+id/elite_kills"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@drawable/star"
            android:gravity="center_vertical"
            android:textColor="@color/standard_text" />
    </LinearLayout>

    <TextView
        android:id="@+id/hardcore_kills"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/hardcore"
        android:gravity="center"
        android:text="test"
        android:textColor="@color/standard_text" />

</LinearLayout>